Address some of opencode comments
Signed-off-by: Ingrid Kamga <Ingrid.Kamga@adorsys.com>