@@ -1,7 +1,9 @@
 package io.github.adorsysgis.keycloak.protocol.oid4vc.mdoc;
 
+import com.fasterxml.jackson.databind.JsonNode;
 import java.util.Collections;
 import java.util.Map;
+import org.keycloak.util.JsonSerialization;
 
 /**
  * Claims presented in mDoc device response, parsed into a succinct structure.
@@ -17,24 +19,15 @@ import java.util.Map;
  * }
  * </pre>
  */
-public record NamespacedClaims(Map<String, Map<String, Object>> namespaces) {
+public record NamespacedClaims(String docType, Map<String, Map<String, Object>> namespaces) {
 
     public NamespacedClaims {
-        namespaces = namespaces == null ? Map.of() : Map.copyOf(namespaces);
+        namespaces = namespaces == null ? Map.of() : Collections.unmodifiableMap(namespaces);
     }
 
-    /**
-     * @return an unmodifiable view of the per-namespace claims map.
-     */
-    @Override
-    public Map<String, Map<String, Object>> namespaces() {
-        return Collections.unmodifiableMap(namespaces);
-    }
-
-    /**
-     * @return the claims map for the given {@code namespace}, or {@code null} if none was presented.
-     */
-    public Map<String, Object> namespace(String namespace) {
-        return namespaces.get(namespace);
+    public JsonNode toJson() {
+        return JsonSerialization.writeValueAsNode(Map.of(
+                MdocConstants.L_DOC_TYPE, docType,
+                MdocConstants.L_NAME_SPACES, namespaces));
     }
 }
